@@ -7,7 +7,7 @@ Release 1.5.2 (2013-06-xx)
 - added VoidEvent (Arturo Castro)
 - fixed GH #80: NumberFormatter::append broken
 - fixed GH #93: ParallelSocketAcceptor virtual functions
-- small object optimization for IPAddress, SocketAddress, Any and Dynamic::Var
+- optional small object optimization for IPAddress, SocketAddress, Any and Dynamic::Var
 - SQLite events (insert, update, delete, commit, rollback) handlers
 - merged GH #91: Improve SQLite multi-threaded use (Rangel Reale)
 - merged GH #86: Invalid pointers to vector internals (Adrian Imboden)
@@ -79,6 +79,8 @@ Release 1.5.2 (2013-06-xx)
 - fixed GH #99: JSON::Query an JSON::Object
 - limited allowed types for JSON::Query to Object, Array, Object::Ptr, 
   Array::Ptr and empty
+- fixed GH #175: HTMLForm does not read URL parameters on POST or PUT
+
 
 Release 1.5.1 (2013-01-11)
 ==========================
